# kugame

./: .flake8  README.md  ag.json  fix_auxiliary_scripts.py  fix_blank_lines.py  fix_commands_dict_indentation.py  fix_comment_indentation.py  fix_duplicate_keys.py  fix_encoding.py  fix_extra_commas.py  fix_final_indentation_issues.py  fix_indentation.py  fix_only_commands_dict.py  fix_syntax.py  fix_trailing_spaces.py  fix_trailing_whitespace.py  fix_whitespace.py  player_save.json  pyproject.toml  test.bat  verify_commands_consistency.py
.trae/documents/: KuGame文字探险游戏改进计划.md  plan_20260107_031043.md  plan_20260107_043642.md  为故事章节添加ASCII图片.md  实现进度保存机制.md  新增测试命令实现计划.md
docs/: test_report.md
kugame/: __init__.py  cli.py  game_engine.py  kubernetes_commands.py  player.py  story.py
kugame.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_game_engine.py  test_kubernetes_commands.py  test_player.py  test_story.py
